Pod.yaml
apiVersion: v1
kind: Pod 
metadata: 
  name: pod1
spec:
  containers:
    - name: nginx
      image: nginx
  nodeSelector:
    node: node1
