Podstorage.yaml
apiVersion: v1 
kind: Pod
metadata:
  name: pod1
spec:
  containers:
    - name: centos
      image: centos
      volumeMounts:
        - name: test-volume 
        - mountPath: /data-pd
  volumes:
    - name: test-volume
      hostPath:
        path: /data
        type: Directory
