Recreate-strategy-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rec-str-up
spec:
  replicas: 8
  selector:
    matchLabels:
      env: grop1
  strategy:
    type: Recreate
  template:
    metadata:
      name: Adisi
      labels:
        env: grop1
    spec:
      containers:
        - name: nginx
          image: nginx
