Rolling-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roll-up
spec:
  replicas: 7
  selector:
    matchLabels:
      env: grop1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: Adisi
      labels:
        env: grop1
    spec:
      containers:
        - name: nginx
          image: nginx
