daemonset.yaml
apiVersion: apps/v1 
kind: DaemonSet
metadata:
  name: adisi-daemonset
spec:
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: nginx
          image: nginx
