podeaffinity.yaml
apiVersion: v1
kind: Pod 
metadata: 
  name: pod1
spec:
  containers:
    - name: nginx
      image: nginx
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: node
                operator: In
                values:
                  - node1
---
apiVersion: v1
kind: Pod 
metadata: 
  name: pod2
spec:
  containers:
    - name: nginx
      image: nginx
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
        - weight: 1
          preference:
            matchExpressions:
              - key: node
                operator: In
                values:
                  - node1
