service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: adisi-serv
spec:
  type: ClusterIP
  selector:
    app: prod
  ports:
    - port: 2000
      targetPort: 80
