ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adisi-ingress
spec:
  rules:
    - host: adisi.com
      http:
        paths:
          - pathType: Prefix
            path: /test
            backend:
              service:
                name: service1
                port:
                  number: 2000
